# homework_ftp_qt

./: README.md
Client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  WinsockClient.cpp  WinsockClient.h  main.cpp
Server/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  WinsockServer.cpp  WinsockServer.h  main.cpp
